openshift-migration/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.22.214
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: migration-controller-9688b78dc-9ff5n
      namespace: openshift-migration
      resourceVersion: "476624636"
      uid: 7154de43-10a2-46fc-a46b-5793e0e6eb99
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-12T20:25:58Z"
    generateName: controller-manager-service-
    generation: 1448
    labels:
      control-plane: controller-manager
      controller-tools.k8s.io: "1.0"
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: controller-manager-service
    name: controller-manager-service-ldqtg
    namespace: openshift-migration
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: controller-manager-service
      uid: 378b8b19-f92a-4a63-9e1d-69105e1b4827
    resourceVersion: "476624640"
    uid: a8082fe4-0032-4276-8fc6-e5c61be6f517
  ports:
  - name: ""
    port: 443
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.22.214
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: migration-controller-9688b78dc-9ff5n
      namespace: openshift-migration
      resourceVersion: "476624636"
      uid: 7154de43-10a2-46fc-a46b-5793e0e6eb99
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-12T20:25:50Z"
    generateName: discovery-
    generation: 1448
    labels:
      app.kubernetes.io/part-of: openshift-migration
      control-plane: controller-manager
      controller-tools.k8s.io: "1.0"
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: discovery
    name: discovery-rds4h
    namespace: openshift-migration
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: discovery
      uid: cb4ab181-ae28-4bc9-9fbc-ded354d616a1
    resourceVersion: "476624643"
    uid: c903876b-df20-475f-8cd8-15014eb7f4b2
  ports:
  - name: ""
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.22.214
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: migration-controller-9688b78dc-9ff5n
      namespace: openshift-migration
      resourceVersion: "476624636"
      uid: 7154de43-10a2-46fc-a46b-5793e0e6eb99
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-12T20:25:44Z"
    generateName: mig-controller-metrics-
    generation: 1448
    labels:
      app: mig-controller
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: mig-controller-metrics
      service.kubernetes.io/headless: ""
    name: mig-controller-metrics-bg7zp
    namespace: openshift-migration
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: mig-controller-metrics
      uid: 0f1979c5-aa92-4b44-b2f8-cda0f5cd23be
    resourceVersion: "476624638"
    uid: 5b67d70f-400f-45af-9d2d-a027ae20b08b
  ports:
  - name: metrics
    port: 2112
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.22.216
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: migration-ui-86f78879f7-z4qpm
      namespace: openshift-migration
      resourceVersion: "476624613"
      uid: d1ba4712-338e-4217-895d-b389dc85d994
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-12T20:26:10Z"
    generateName: migration-ui-
    generation: 128
    labels:
      app: migration
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: migration-ui
      service: migration-ui
    name: migration-ui-q7hhf
    namespace: openshift-migration
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: migration-ui
      uid: fd63dfbe-3352-48a0-b4c7-22395fa00a7d
    resourceVersion: "476624617"
    uid: 072506a6-71b4-4bd4-8e7e-1d004e572cb3
  ports:
  - name: port-9000
    port: 9000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.22.158
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: openshift-adp-controller-manager-5f7bb58f7-68dnw
      namespace: openshift-migration
      resourceVersion: "476624595"
      uid: 2f6ed74f-272e-40b1-9f78-70e86c052863
    zone: brazilsouth-2
  - addresses:
    - 10.128.22.214
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: migration-controller-9688b78dc-9ff5n
      namespace: openshift-migration
      resourceVersion: "476624636"
      uid: 7154de43-10a2-46fc-a46b-5793e0e6eb99
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-06T12:20:18Z"
    generateName: openshift-adp-controller-manager-metrics-service-
    generation: 38514
    labels:
      control-plane: controller-manager
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: openshift-adp-controller-manager-metrics-service
      operators.coreos.com/redhat-oadp-operator.openshift-migration: ""
    name: openshift-adp-controller-manager-metrics-service-wxfwp
    namespace: openshift-migration
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: openshift-adp-controller-manager-metrics-service
      uid: 9a081f7f-d81d-44ab-a1bf-4bdb0a7bd864
    resourceVersion: "494960498"
    uid: cb2f47d1-36b7-4f19-a094-5cba3c0473c8
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.22.159
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: velero-5bcb94bb68-lw7ld
      namespace: openshift-migration
      resourceVersion: "476624569"
      uid: 472ba212-e451-4bb6-b046-011424b648a7
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-12T20:25:40Z"
    generateName: openshift-adp-velero-metrics-svc-
    generation: 122
    labels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: velero
      app.kubernetes.io/managed-by: oadp-operator
      app.kubernetes.io/name: velero
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: openshift-adp-velero-metrics-svc
      openshift.io/oadp: "True"
    name: openshift-adp-velero-metrics-svc-vtrvg
    namespace: openshift-migration
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: openshift-adp-velero-metrics-svc
      uid: 6555c84e-9da4-4465-9f8d-2e0e1919184a
    resourceVersion: "476624571"
    uid: 2b2526d5-8fd4-4ae9-a02d-54038c782cc2
  ports:
  - name: monitoring
    port: 8085
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
